lldap/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
      - name: lldap
        image: nitnelave/lldap:2025-04-25-alpine
        ports:
        - name: ldap
          containerPort: 3890
        - name: web-ui
          containerPort: 17170
        volumeMounts:
        - name: data
          mountPath: /data
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: lldap-data
