lldap/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-ingress
  namespace: auth
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`lldap.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: lldap-service
      port: web-ui
